callme-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: callme-service
spec:
  type: ClusterIP
  selector:
    app: callme
  ports:
    - port: 8080
