callme-service/k8s/istio-with-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: callme-service-gateway-route
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - headers:
            X-Version:
              exact: v1
          uri:
            prefix: "/callme"
      rewrite:
        uri: " "
      route:
        - destination:
            host: callme-service.test.svc.cluster.local
            subset: v1
    - match:
        - uri:
            prefix: "/callme"
          headers:
            X-Version:
              exact: v2
      rewrite:
        uri: " "
      route:
        - destination:
            host: callme-service.test.svc.cluster.local
            subset: v2
    - match:
        - uri:
            prefix: "/callme"
      rewrite:
        uri: " "
      route:
        - destination:
            host: callme-service.test.svc.cluster.local
            subset: v1
          weight: 20
        - destination:
            host: callme-service.test.svc.cluster.local
            subset: v2
          weight: 80
