callme-service/k8s/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: callme-service-destination
spec:
  host: callme-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: callme-service-route
spec:
  hosts:
    - callme-service
  http:
    - match:
        - headers:
            X-Version:
              exact: v1
      route:
        - destination:
            host: callme-service
            subset: v1
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
    - match:
        - headers:
            X-Version:
              exact: v2
      route:
        - destination:
            host: callme-service
            subset: v2
      fault:
        delay:
          percentage:
            value: 50
          fixedDelay: 3s
    - route:
        - destination:
            host: callme-service
            subset: v1
          weight: 20
        - destination:
            host: callme-service
            subset: v2
          weight: 80
